[package]
name = "fragger-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "2.1.4", features = ["sqlite"]} 
serenity = "0.12.0"
tokio = {version = "1.35.1", features = ["full"]}
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }